--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+body {
+  background-color: green;
+}
+
+h1 {
+font-size: 20px;
+color: white;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  height: 300px;
+}
+div {
+  color: white;
+  font-weight: bold;
+
+
+}
